# Oura

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
apps/dashboard/: app.py  config.py  styles.py
apps/dashboard/.streamlit/: config.toml
apps/dashboard/components/: auth_web.py  charts.py  data.py
apps/dashboard/components/agent/: __init__.py  orchestrator.py  prompts.py  providers.py  pubmed.py  tools.py
apps/dashboard/pages/: 10_labs.py  1_dashboard.py  2_sleep.py  3_readiness.py  4_activity.py  5_heart_rate_stress.py  6_correlations.py  7_anomalies.py  8_assistant.py  9_import.py
docs/: 01_sandbox_setup.md  02_streamlit_dashboard.md  03_ai_health_assistant.md  README.md  TODO.md  index.html
docs/data/: README.md  SCHEMA.md  sample_activity.csv
notebooks/: 01_explore_sleep.ipynb  02_activity_readiness.ipynb  03_heart_rate_stress.ipynb
scripts/: check_no_secrets.py
src/health_import/: __init__.py  excel_parser.py  pdf_parser.py  storage.py
src/oura_client/: __init__.py  auth.py  client.py  models.py  sandbox.py
tests/: conftest.py  test_client.py  test_health_import.py
